ADD: module styles

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,7 +9,7 @@
   align-items: center;
 }
 
-.header .header-container {
+.container {
   max-width: 97%;
   width: 100%;
   margin: 0 auto;
@@ -18,12 +18,15 @@
   justify-content: center;
 }
 
-.header .header-container a {
+.link {
   text-decoration: none;
   padding: 10px;
   color: #fff;
+
+  &:active {
+    color: #ffffff33;
+  }
 }
 
-.header .header-container a.active {
-  color: #ffffff33;
-}
+
+
