--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -1,20 +1,16 @@
-
-
-.form-wrapper {
+.wrapper {
   width: 100%;
   height: 80px;
-
   position: relative;
   padding: 15px;
   z-index: 5;
-
   background-color: #4682b4;
   box-shadow: 0 2px 4px rgba(44, 62, 80, 0.15);
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
 }
 
-.form-wrapper form input {
+.input {
   width: 100%;
   height: 50px;
   color: #fff;
@@ -29,10 +25,10 @@
   outline: none;
 }
 
-.form-wrapper form button {
+.button {
   width: 50px;
   height: 50px;
-  background: transparent url(../../images/plus.png) no-repeat center/cover;
+  background: transparent url(../../assets/images/plus.png) no-repeat center/cover;
   position: absolute;
   top: 15px;
   right: 15px;
